<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="createCategoryTitle">Add Budget:</string>
    <string name="etCategoryName">Enter budget name</string>
    <string name="etBudget">Enter budget</string>
    <string name="etAlreadySpent">Enter amount already spent</string>
    <string name="imgPlaceholder">Expense Tracker</string>
    <string name="categoryName">Category Name</string>
    <string name="chooseIcon">Set Icon</string>
    <string name="chooseCategoryName">Set Category Name</string>
    <string name="chooseBudget">Set Budget</string>
    <string name="chooseAlreadySpent">Set Amount Already Spent</string>
    <string name="image_car">Car Image</string>

</resources>
