<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBudgetActivity"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/icToolbar2"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivHead"
        android:layout_below="@id/icToolbar2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/imgPlaceholder"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circleImageViewStyle"
        app:srcCompat="@drawable/cash" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivHead"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/createCategoryTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etCategoryName" />

        <EditText
            android:id="@+id/editBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etBudget"
            android:numeric="decimal" />

        <EditText
            android:id="@+id/editTextAlreadySpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAlreadySpent"
            android:numeric="decimal" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>