<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBudgetActivity"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/icToolbar2"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icToolbar2"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/createCategoryTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/chooseIcon"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_car"
                    android:contentDescription="@string/image_car"
                />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_cigarette"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_coffee"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_food"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_furniture"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_games"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_home"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_music"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_phone"
                    android:contentDescription="@string/image_car"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_wine"
                    android:contentDescription="@string/image_car"
                    />
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseCategoryName"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etCategoryName" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseBudget"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etBudget"
            android:numeric="decimal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseAlreadySpent"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAlreadySpent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAlreadySpent"
            android:numeric="decimal" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>